--- a/beautyChuSpring/src/main/webapp/view/yun-stylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-stylethumbnail.html
@@ -42,6 +42,8 @@
 	float: left;
 	margin: 5px;
 	font-size: 40px;
+	border-radius : 10px;
+	overflow: hidden;
 }
 
 .yun-edge {
@@ -54,7 +56,7 @@
 
 .yun-boximage {
 	width: 280px;
-	/* height: 410px; */
+	height: 410px;
 }
 
 .kh-basic {
@@ -82,6 +84,8 @@
 /* yun-test.html css */
 #changediv {
 	position: relative;
+	border-radius:10px;
+	overflow: hidden;
 }
 
 .yun-div {
@@ -131,6 +135,8 @@
 .yun-shopstyleimage {
 	width: 168px;
 	height: 178px;
+	border-radius:5px;
+	overflow: hidden;
 }
 /* ============================================================== */
 /* yun-styledetail.html css */
