.. 버튼 스타일 변경

--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
@@ -71,72 +71,70 @@
 	<div id="wrap-chu" class="wrap-chu">
 
  -->
- 
-		<div id=yun-shopdetailcontainer>
-		
-<!--*****************************************************************************************-->
-<!--**************************** 샵사진 슬라이드가 들어가는 div *****************************-->
-			<div id=yun-shopphotolist class=yun-shopcontainerdiv>
 
-				<div class=yun-shopphotobig>
-					<img class=yun-shopphotobig src="../images/shop/shop1.jpg">
-				</div>
-				<div id=yun-shopphotosmall>
-					<img class=yun-shopphotosmall src="../images/shop/shop2.jpg">
-				</div>
-				<div id=yun-shopphotosmall>
-					<img class=yun-shopphotosmall src="../images/shop/shop3.jpg">
-				</div>
-				<div id=yun-shopphotosmall>
-					<img class=yun-shopphotosmall src="../images/shop/shop4.jpg">
-				</div>
-				<div id=yun-shopphotosmall>
-					<img class=yun-shopphotosmall src="../images/shop/shop5.jpg">
-				</div>
-				
-			</div>
+<div id=yun-shopdetailcontainer>
 
-<!--*****************************************************************************************-->
-<!--**************************** 버튼 div  **************************************************-->
-			<div id=yun-shopcontent class=yun-shopcontainerdiv>
-				<div id=yun-buttondiv>
-					<img class=yun-back src="../images/yun-shopdetail/back-icon.png"> 
-					<img class=yun-exit src="../images/yun-shopdetail/exit-icon.png">
-				</div>
-<!--*****************************************************************************************-->
-<!--**************************** 샵 제목 div  ***********************************************-->
+	<!--*****************************************************************************************-->
+	<!--**************************** 샵사진 슬라이드가 들어가는 div *****************************-->
+	<div id=yun-shopphotolist class=yun-shopcontainerdiv>
 
-				<div id=yun-shoptitle>
-					<h1>Fabien.H</h1>
-				</div>
-<!--*****************************************************************************************-->
-<!--**************************** 샵 내용 div **************************************-->
+		<div class=yun-shopphotobig>
+			<img class=yun-shopphotobig src="../images/shop/shop1.jpg">
+		</div>
+		<div id=yun-shopphotosmall>
+			<img class=yun-shopphotosmall src="../images/shop/shop2.jpg">
+		</div>
+		<div id=yun-shopphotosmall>
+			<img class=yun-shopphotosmall src="../images/shop/shop3.jpg">
+		</div>
+		<div id=yun-shopphotosmall>
+			<img class=yun-shopphotosmall src="../images/shop/shop4.jpg">
+		</div>
+		<div id=yun-shopphotosmall>
+			<img class=yun-shopphotosmall src="../images/shop/shop5.jpg">
+		</div>
 
-				<div id='yun-shopcontentdetail'>
-<pre>
+	</div>
+
+	<!--*****************************************************************************************-->
+	<!--**************************** 버튼 div  **************************************************-->
+	<div id=yun-shopcontent class=yun-shopcontainerdiv>
+		<div id=yun-buttondiv>
+			<img class=yun-back src="../images/yun-shopdetail/back-icon.png">
+			<img class=yun-exit src="../images/yun-shopdetail/exit-icon.png">
+		</div>
+		<!--*****************************************************************************************-->
+		<!--**************************** 샵 제목 div  ***********************************************-->
+
+		<div id=yun-shoptitle>
+			<h1>Fabien.H</h1>
+		</div>
+		<!--*****************************************************************************************-->
+		<!--**************************** 샵 내용 div **************************************-->
+
+		<div id='yun-shopcontentdetail'>
+			<pre>
 1.화학적 알칼리를 사용하지 않고 아미노산 단백질로만 시술합니다. 
 2.세라마이드 함유로 모발세포의 응집력을 강화시켰습니다.
 3.고중합 실리콘 함유로 자연스런 웨이브와 매끄러움 윤기가 뛰어납니다.
 4.프로테인 중화제로 웨이브와 클리닉 효과가 오래 지속됩니다.
 </pre>
-				</div>
-
-
-
-<!--*****************************************************************************************-->
-<!--**************************** 샵댓글 슬라이드가 들어가는 div+ 버튼 div*********************-->
-<div>
-<button type="button" class='yun-shoppricelist'>Price List</button>
-<button type="button" class='get-coupon' >Get Coupon</button>
-</div>
-				<div id=yun-shopcomment class=yun-shopcomment>
-				<img class=yun-shopcomment src="../images/yun-shopdetail/comment.png"/>
-
-<!--*****************************************************************************************-->
-				
-				</div>
-			</div>
 		</div>
+
+
+
+
+		<div class=buttondiv>
+			<div class="ui button yun-shoppricelist">Price List</div>
+			<div class="ui button get-coupon">Get Coupon</div>
+		</div>
+
+		<div id=yun-shopcomment class=yun-shopcomment>
+			<img class=yun-shopcomment src="../images/yun-shopdetail/comment.png" />
+
+		</div>
+	</div>
+</div>
 <!-- 
 	</div>
 
