--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
@@ -104,8 +104,8 @@
 
 		<h1>Price List</h1>
 
-		<div id=yun-shoppricelistbutton>
-			<button type="button" class=yun-getcouponbutton>쿠폰 받기</button>
+		<div class=buttondiv>
+			<div class="ui button get-coupon">Get Coupon</div>
 		</div>
 		<img src="../images/yun-shopdetail/pricelist.png" width="100%">
 
