--- a/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
@@ -71,65 +71,72 @@
 	<div id="wrap-chu" class="wrap-chu">
 
  -->
- 
-		<div id=yun-styledetailcontainer>
 
-			<div id=yun-stylephotolist class=yun-stylecontainerdiv>
+<div id=yun-styledetailcontainer>
 
-				<div class=yun-stylephotobig>
-					<img class=yun-stylephotobig src="../images/style-detail/bp1.JPG">
-				</div>
-				<div id=yun-stylephotosmall>
-					<img class=yun-stylephotosmall src="../images/style-detail/bp1.JPG">
-				</div>
-				<div id=yun-stylephotosmall>
-					<img class=yun-stylephotosmall src="../images/style-detail/bp2.JPG">
-				</div>
-				<div id=yun-stylephotosmall>
-					<img class=yun-stylephotosmall src="../images/style-detail/bp3.JPG">
-				</div>
-				<div id=yun-stylephotosmall>
-					<img class=yun-stylephotosmall src="../images/style-detail/bp2.JPG">
-				</div>
+	<div id=yun-stylephotolist class=yun-stylecontainerdiv>
 
-
-			</div>
+		<div class=yun-stylephotobig>
+			<img class=yun-stylephotobig src="../images/style-detail/bp1.JPG">
+		</div>
+		<div id=yun-stylephotosmall>
+			<img class=yun-stylephotosmall src="../images/style-detail/bp1.JPG">
+		</div>
+		<div id=yun-stylephotosmall>
+			<img class=yun-stylephotosmall src="../images/style-detail/bp2.JPG">
+		</div>
+		<div id=yun-stylephotosmall>
+			<img class=yun-stylephotosmall src="../images/style-detail/bp3.JPG">
+		</div>
+		<div id=yun-stylephotosmall>
+			<img class=yun-stylephotosmall src="../images/style-detail/bp2.JPG">
+		</div>
 
 
+	</div>
 
-			<div id=yun-stylecontent class=yun-stylecontainerdiv>
-				<div id=yun-buttondiv>
-					<img class=yun-back src="../images/yun-shopdetail/back-icon.png"> 
-					<img class=yun-exit src="../images/yun-shopdetail/exit-icon.png">
-				</div>
 
-				<div id=yun-styletitle>
-					<h1>자연스러운 네츄럴 펌</h1>
-				</div>
 
-				<div id='yun-stylecontentdetail'>
-					<pre>
+	<div id=yun-stylecontent class=yun-stylecontainerdiv>
+		<div id=yun-buttondiv>
+			<img class=yun-back src="../images/yun-shopdetail/back-icon.png">
+			<img class=yun-exit src="../images/yun-shopdetail/exit-icon.png">
+		</div>
+
+		<div id=yun-styletitle>
+			<h1>자연스러운 네츄럴 펌</h1>
+		</div>
+
+		<div id='yun-stylecontentdetail'>
+			<pre>
 1.화학적 알칼리를 사용하지 않고 아미노산 단백질로만 시술합니다. 
 2.세라마이드 함유로 모발세포의 응집력을 강화시켰습니다.
 3.고중합 실리콘 함유로 자연스런 웨이브와 매끄러움 윤기가 뛰어납니다.
 4.프로테인 중화제로 웨이브와 클리닉 효과가 오래 지속됩니다.
 </pre>
-				</div>
+		</div>
 
 
-<div id=yun-stylebutton>
+		<!-- <div id=yun-stylebutton>
 <button type="button" class=yun-shop-button>샵 더보기</button>
 <button type="button" class=yun-getcouponbutton >쿠폰 받기</button>
 </div>
+ -->
 
 
-				<div id=yun-stylecomment class=yun-stylecomment>
-				<img class=yun-stylecomment src="../images/yun-shopdetail/comment.png"/>
-				
-				</div>
-			</div>
+		<div class=buttondiv>
+			<div class="ui button yun-shop-button">Shop</div>
+			<div class="ui button get-coupon">Get Coupon</div>
+		</div>
+
+		<div id=yun-stylecomment class=yun-stylecomment>
+			<img class=yun-stylecomment
+				src="../images/yun-shopdetail/comment.png" />
 
 		</div>
+	</div>
+
+</div>
 <!-- 
 	</div>
 
