--- a/beautyChuSpring/src/main/webapp/view/yun-test.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-test.html
@@ -1,114 +1,1 @@
-<!-- 
-<style type="text/css">
-/* 스타일 적용 공간! */
-#changediv {
-	position: relative;
-	width: 600px;
-	height: 300px;
-}
-
-div{
-	background-size: 600px 300px;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-}
-
-#div1 {
-	background-image: url("../images/yun-test/shopimg.png");
-	z-index: 1;
-}
-
-</style>
-
-</head>
-
-<body>
-
-	<header>
-		header 건들지 말긔!
-	</header>
-
- -->
-
-
-
-		<div id=changediv >
-			<div id=div1>1 
-			<button class='yun-pricelist' type="button">price list</button>
-			</div>
-
-		</div>
-
-
-<!-- 
-
-	<footer>
-		footer 건들지 말긔!
-	</footer>
-
- -->
-
-
-
-	<!-- header, footer 로드 스크립트!! -->
-<!-- 	<script type="text/javascript"
-		src='../js/resources/jquery-2.1.1.min.js'></script> -->
-	<script>
-		
-	
-		var pagebtnnum =2;
-	
-		$('header').load('common/header.html');
-		$('footer').load('common/footer.html');
-
-		
-		$('#changediv').delegate(".yun-pricelist","click",function() {
-			$('<div>').fadeIn('fast').appendTo("#changediv").attr('id','div'+pagebtnnum)
-			.css({"z-index":pagebtnnum,"background-image":"url('../images/yun-test/shopimg2.png')"})
- 			.append($('<button>').html('back').attr({'class':'yun-back-button','id':'yun-back-button'+pagebtnnum}))
- 			.append($('<button>').html('style').attr({'class':'yun-style-button','id':'yun-style-button'+pagebtnnum}))
- 			.append($('<button>').html('x').attr({'class':'yun-exit'}));
-			pagebtnnum++;
-		});
-
-		
-		$('#changediv').delegate(".yun-back-button","click",function(){
-			pagebtnnum--;
-			$('#div'+pagebtnnum).fadeOut('slow').remove();
-		});
-		
-		$('#changediv').delegate(".yun-exit","click",function(){
-			pagebtnnum--;
-			for(var i=pagebtnnum; i>1 ; i--){
-				$('#div'+i).remove();
-			}
-		});
-		
-		$('#changediv').delegate(".yun-style-button","click",function() {
-			$('<div>').fadeIn('fast').appendTo("#changediv").attr('id','div'+pagebtnnum)
-			.css({"z-index":pagebtnnum,"background-image":"url('../images/yun-test/styleimg.png')"})
- 			.append($('<button>').html('back').attr({'class':'yun-back-button','id':'yun-back-button'+pagebtnnum}))
- 			.append($('<button>').html('shop').attr({'class':'yun-shop-button','id':'yun-shop-button'+pagebtnnum}))
- 			.append($('<button>').html('x').attr({'class':'yun-exit'}));
-			pagebtnnum++;
-
-		});
-		
-
-		$('#changediv').delegate(".yun-shop-button","click",function() {
-			$('<div>').fadeIn('fast').appendTo("#changediv").attr('id','div'+pagebtnnum)
-			.css({"z-index":pagebtnnum,"background-image":"url('../images/yun-test/shopimg.png')"})
- 			.append($('<button>').html('back').attr({'class':'yun-back-button','id':'yun-back-button'+pagebtnnum}))
- 			.append($('<button>').html('price list').attr({'class':'yun-pricelist','id':'yun-back-button'+pagebtnnum}))
- 			.append($('<button>').html('x').attr({'class':'yun-exit'}));
-			pagebtnnum++;
-
-		});
-		
-		
-		
-		
-
-/* 		window.setTimeout('window.location.reload()', 20000); //60초마다 새로고침
- */	</script>
+res.header("Access-Control-Allow-Origin"res.header("Access-Control-Allow-Origin", "*"); "*");
