--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
@@ -107,7 +107,7 @@
 		<div class=buttondiv>
 			<div class="ui button get-coupon">Get Coupon</div>
 		</div>
-		<img src="../images/yun-shopdetail/pricelist.png" width="100%">
+		<img src="../images/yun-shopdetail/pricelist.png" width="100%" height="75%"/>
 
 	</div>
 
