--- a/beautyChuSpring/src/main/webapp/view/yun-test.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-test.html
@@ -1,1 +1,24 @@
-res.header("Access-Control-Allow-Origin"res.header("Access-Control-Allow-Origin", "*"); "*");
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Insert title here</title>
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+</head>
+
+<body>
+<input type="text" id="keyevent" placeholder="아이디를 입력하세요"/>
+<p id='yesno'></p>
+
+<script type="text/javascript">
+$("#keyevent").keyup(function(data){
+	$.get("http://192.168.0.143:52273/id",{
+		id : $('#keyevent').val()
+	},function(data){
+		$('#yesno').html(data.result);
+	})
+});
+
+</script>
+</body>
+</html>
