jy_main & jy_menuber(header) + css, js -- 90% ::: 다른 페이지와 합쳐봐야함.

--- a/beautyChuSpring/src/main/webapp/css/jy/jy_dialog.css
+++ b/beautyChuSpring/src/main/webapp/css/jy/jy_dialog.css
@@ -34,7 +34,9 @@
 
 
 .dialog__content {
-	width: 550px;
+	margin-top:69px; /* 상단 메뉴바 바로 아래에서 나오도록 메뉴바 사이즈만큼 마진 주기  */
+	/* width: 550px; */
+	width:27%;
 	/* max-width: 560px; */
 	min-width: 290px;
 	background: #fff;
@@ -59,38 +61,63 @@
 	margin: 0;
 }
 
+/* dialog page buttons */
+.dialog button {
+	outline: none;
+	font-weight: 600;
+	border: none;
+	color: #fff;
+	background : black;
+}
+
 
 /* login form css */
-.form-signin-heading { padding-bottom: 30px;}
-.sr-only { float: left;}
-.form-control-login { width: 250px; height: 25px; font-size: 11px;}
-.login-line { margin: 5px 0px;}
-.checkbox { margin-top: 20px;}
-.checkbox-line { margin-left: -10px;}
-.btn-login { margin-top: 50px; width: 410px; float: left;}
-.btn-login-close { margin: 0; float: right; padding: 0; margin-right: -65px;}
-.login-header-area { margin-bottom: 30px;}
+.jy-form-signin-heading { padding-bottom: 30px;}
+.sr-only { float: left; font-size: 14px; margin-top: 8px;}
+.jy-form-control-login { width: 190px; height: 25px; font-size: 11px;}
+.jy-login-line { margin: 5px 0px; width: 320px;}
+.jy-checkbox { margin-top: 10px;}
+.jy-checkbox-line { margin-left: -75px; }
+.jy-btn-login { width: 90px; float: right; height: 63px; margin-top: -68px; font-size: 20px;/* 사이즈 별로면 없애 */}
+.jy-btn-gojoin { margin-top: 50px; width: 410px; float: left; padding: 1em 2em; font-size: 15px;}
+.jy-btn-join {width: 288px; float: left; padding: 1em 2em; margin-left: -8px; font-size: 15px;}
+.jy-btn-login-close { margin: 0; float: right; padding: 0; margin-right: -65px;}
+.jy-login-header-area { margin-bottom: 30px;}
 
-#inputEmail { margin-left: 40px;}
-#inputPassword { margin-left: 70px;}
+#jy-inputEmail { margin-left: 0px;}
+#jy-inputPassword { margin-left: 30px;}
 
 
 /* join form css */
 /* .dialog__content {width: 800px;} */
 /* .form-signup-heading { padding-bottom: 30px;}  */
-.btn-join-close { margin: 0; float: right; padding: 0; margin-right: -65px; margin-top: -130px;}
-.join-header-area { margin-bottom: 30px; margin-top: 30px;}
-.control-label {float: left;}
-.form-group {margin-bottom: 20px;}
-.form-control-join { width: 250px; margin-left: 20px; height: 25px; font-size: 11px;}
-.btn-join-fin {width: 354px; float: left;}
-.register-alert {float: left;}
-.join {margin-left: 30px; margin-top: -30px;}
-.alert-message {font-size: 13px; width: 354px;}
+.jy-btn-join-close { margin: 0; float: right; padding: 0; margin-right: -65px; margin-top: -130px;}
+.jy-join-header-area { margin-bottom: 30px; margin-top: 30px;}
+.jy-control-label {float: left; font-size:14px; margin-top: 8px;}
+.jy-form-group {margin-bottom: 20px;}
+.jy-form-control-join { width: 250px; margin-left: 30px; height: 25px; font-size: 11px;}
+.jy-form-control-label { width: 250px; margin-left: 30px; height: 25px; font-size: 11px;}
+.jy-btn-join-fin {width: 347px; float: left; margin-top: 20px;}
+.jy-register-alert {float: left;}
+.jy-join {margin-left: 30px; margin-top: -30px;}
+.jy-alert-message {font-size: 13px; width: 347px; margin-top: 10px;}
+.jy-btn-public-join { padding: 80px 40px; padding: 1em 2em;}
+.jy-btn-licensee-join { padding: 80px 35px; padding: 1em 2em;}
+/* .jy-email { font-size: 15px;}
+.jy-nick { font-size: 15px;}
+.jy-pw { font-size: 15px;}
+.jy-pwr { font-size: 15px;}  */
 
-#user_pw { margin-left: 6px;}
-#confirm_pw { margin-left: -29px;}
 
+
+#jy-user_pw { margin-left: 15px;}
+#jy-confirm_pw { margin-left:-20px;} 
+#jy-email-check { 
+	font-size:12px; text-align: left;
+	margin-top: -10px; margin-bottom: 10px; 
+	width: 265px; padding-left: 100px; 
+	/* margin-left:141px; */
+	}
 
 
 
