--- a/beautyChuSpring/src/main/webapp/css/jy/jy_header.css
+++ b/beautyChuSpring/src/main/webapp/css/jy/jy_header.css
@@ -37,7 +37,7 @@
   top: 0px;
   left: 0px;
   width: 100%;
-  /* width: auto; */
+  width: auto;
   font-family: Lato;
   line-height: 1;
   background: #3a3b40;
@@ -45,8 +45,8 @@
 #menu-icon {
 	display: block !important;
 	position: absolute;
-	/* font-size: 1.6em;
-	font-weight: bold; */
+	font-size: 1.6em;
+	font-weight: bold;
 	color: #fff;
 }
 #menu-home{
@@ -300,8 +300,8 @@
     color: #fff;
     cursor: pointer;
     font-weight: bold;
-    /* font-size: 1.2em; */
-    /* text-transform: uppercase; */
+    font-size: 1.2em;
+    text-transform: uppercase;
   }
   #cssmenu #menu-button::after {
     content: '';
